Busca cidade no Criar Festivais

--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=us-cdbr-east-05.cleardb.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=heroku_dff729a853e7e15
-DB_USERNAME=bb1918621f1e6f
-DB_PASSWORD=9d9e2af6
+DB_DATABASE=Laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
